// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton avatar shape 1`] = `
<div
  class="alu-skeleton alu-skeleton-with-avatar"
>
  <div
    class="alu-skeleton-header"
  >
    <span
      class="alu-skeleton-avatar alu-skeleton-avatar-lg alu-skeleton-avatar-circle"
    />
  </div>
  <div
    class="alu-skeleton-content"
  >
    <h3
      class="alu-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="alu-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar shape 2`] = `
<div
  class="alu-skeleton alu-skeleton-with-avatar"
>
  <div
    class="alu-skeleton-header"
  >
    <span
      class="alu-skeleton-avatar alu-skeleton-avatar-lg alu-skeleton-avatar-square"
    />
  </div>
  <div
    class="alu-skeleton-content"
  >
    <h3
      class="alu-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="alu-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 1`] = `
<div
  class="alu-skeleton alu-skeleton-with-avatar"
>
  <div
    class="alu-skeleton-header"
  >
    <span
      class="alu-skeleton-avatar alu-skeleton-avatar-sm alu-skeleton-avatar-circle"
    />
  </div>
  <div
    class="alu-skeleton-content"
  >
    <h3
      class="alu-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="alu-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 2`] = `
<div
  class="alu-skeleton alu-skeleton-with-avatar"
>
  <div
    class="alu-skeleton-header"
  >
    <span
      class="alu-skeleton-avatar alu-skeleton-avatar-circle"
    />
  </div>
  <div
    class="alu-skeleton-content"
  >
    <h3
      class="alu-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="alu-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 3`] = `
<div
  class="alu-skeleton alu-skeleton-with-avatar"
>
  <div
    class="alu-skeleton-header"
  >
    <span
      class="alu-skeleton-avatar alu-skeleton-avatar-lg alu-skeleton-avatar-circle"
    />
  </div>
  <div
    class="alu-skeleton-content"
  >
    <h3
      class="alu-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="alu-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph rows 1`] = `
<div
  class="alu-skeleton"
>
  <div
    class="alu-skeleton-content"
  >
    <h3
      class="alu-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="alu-skeleton-paragraph"
    >
      <li />
      <li />
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph width 1`] = `
<div
  class="alu-skeleton"
>
  <div
    class="alu-skeleton-content"
  >
    <h3
      class="alu-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="alu-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 93%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph width 2`] = `
<div
  class="alu-skeleton"
>
  <div
    class="alu-skeleton-content"
  >
    <h3
      class="alu-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="alu-skeleton-paragraph"
    >
      <li
        style="width: 28%;"
      />
      <li
        style="width: 93%;"
      />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton title width 1`] = `
<div
  class="alu-skeleton"
>
  <div
    class="alu-skeleton-content"
  >
    <h3
      class="alu-skeleton-title"
      style="width: 93%;"
    />
    <ul
      class="alu-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;
